src/objects/Trip__c.object
<CustomObject>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Favorite_Description__c</fullName>
        <label>Favorite Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Favorite__c</fullName>
        <label>Favorite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shop__c</fullName>
        <label>Shop</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trips</relationshipLabel>
        <relationshipName>Trips</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Weather__c</fullName>
        <label>Weather</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sunny</fullName>
                </value>
                <value>
                    <fullName>Mostly Sunny</fullName>
                </value>
                <value>
                    <fullName>Partly Sunny</fullName>
                </value>
                <value>
                    <fullName>Cloudy</fullName>
                </value>
                <value>
                    <fullName>Rain</fullName>
                </value>
                <value>
                    <fullName>Thunder Storm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Trip</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Trip Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trips</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>